# rug-pull-chronicles-program

./: .gitignore  Anchor.toml  README.md  package.json
frontend/: .gitignore  env.example  next.config.mjs  package.json  tailwind.config.ts
frontend/public/metadata/: nft1.json  nft2.json  nft3.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/_components/: Header.tsx  MintPage.tsx  MintSuccessMessage.tsx  SelectScam.tsx  ShowScammedNft.tsx  SwitchConnection.tsx
frontend/src/components/: MintNFT.tsx
frontend/src/lib/: generateImage.ts  program.ts  publicReadTest.ts  scams.json
frontend/src/providers/: connectionProvider.tsx  walletAdapterProvider.tsx
frontend/src/scripts/: fetch-devnet-collections.ts
programs/rug-pull-chronicles-program/: Cargo.toml
programs/rug-pull-chronicles-program/src/: constants.rs  cpi.rs  error.rs  lib.rs  utils.rs
programs/rug-pull-chronicles-program/src/instructions/: add_collection_plugin.rs  add_freeze_delegate.rs  create_collection.rs  freeze_asset.rs  initialize.rs  mint_rugged_nft.rs  mint_scammed_nft.rs  mint_standard_nft.rs  mod.rs  thaw_asset.rs  update_collection.rs  update_config.rs  update_traits.rs  verify_rugged_user.rs
programs/rug-pull-chronicles-program/src/state/: collection.rs  config.rs  mod.rs  rugged_nft.rs  rugged_user.rs  standard_nft.rs
programs/rug-pull-chronicles-program/src/utils/: fees.rs
scripts/: create-collections.ts  create-devnet-collections.ts  initialize-devnet.ts
tests/: collections.ts  metaplex-core-example.ts  rug-pull-chronicles-program.ts
(+13 files in other folders)
