[package]
name = "rug-pull-chronicles-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rug_pull_chronicles_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
scam_verification = []                                        # default off for MVP

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-core = "0.9.1"
